--- a/index.html
+++ b/index.html
@@ -9,29 +9,20 @@
 </head>
 <body>
   <header>
-    <h1>Innovaciones Futuristas</h1>
-    <nav>
-      <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
+    <!--Gustavo-->
   </header>
 
   <main id="inicio">
-    <div class="tarjeta">
-      <h2>¡Bienvenido al Mañana, Hoy!</h2>
-      <p>En <strong>Innovaciones Futuristas</strong> llevamos la tecnología al extremo… ¡sin necesidad de DeLorean! 😜</p>
-      <p>Explora nuestras propuestas de dispositivos inteligentes, proyecto espacial de drones autónomos y hasta un robot barista que prepara el mejor mate con IA.</p>
-      <button class="boton-futurista">Explorar Proyectos</button>
-    </div>
+    <!--Matias-->
+
+
+    <!--Carlos-->
+
+
   </main>
 
   <footer>
-    <p>&copy; 2025 Innovaciones Futuristas. Todos los derechos reservados.</p>
-    <p>Diseñado con pasión por programadores visionarios. Síguenos en <a href="#">@FutuTech</a></p>
-    <p id="contacto">Contacto: <a href="mailto:hola@fututech.com">hola@fututech.com</a></p>
+    <!--Gustavo-->
   </footer>
 </body>
 </html>
