feat(Carlos Girett): Se agrego la seccion de Sobre Nosotros con sus estilos CSS.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
   <main id="inicio">
     <!--Matias-->
 
-
+    <!-- Sobre Nosotros Section -->
+    <section id="sobre-nosotros"
+      class="py-20 px-4 bg-gradient-to-br from-purple-900 to-indigo-900 flex flex-col items-center text-center">
+      <div class="glassmorphism p-8 md:p-12 rounded-xl max-w-4xl w-full mx-auto animate-fade-in animate-delay-200">
+        <h2 class="text-4xl font-bold mb-8 text-teal-300">Sobre Nosotros</h2>
+        <p class="text-lg md:text-xl mb-6 text-blue-100">Somos un equipo de mentes brillantes, soñadores y tecnólogos
+          apasionados por transformar el futuro. Desde nuestra fundación en 2020, nos hemos dedicado a la investigación,
+          desarrollo y aplicación de tecnologías disruptivas que mejoran la vida de las personas y empujan los límites
+          de lo posible.</p>
+        <p class="text-lg md:text-xl text-blue-100">Nuestra misión es simple: hacer que el futuro sea una realidad
+          accesible para todos, hoy. Creemos en la innovación sostenible y en el impacto positivo que la tecnología
+          puede tener en la sociedad.</p>
+      </div>
+    </section>
     <!--Carlos-->
     <section id="proyectos"
       class="py-20 px-4 bg-gradient-to-tl from-gray-900 to-blue-900 flex flex-col items-center text-center">
