(Gustavo) Se actualizo y modifico el footer

--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
 
   </main>
 
-  <footer>
-    <!--Gustavo-->
-  </footer>
+  <footer class="py-8 px-4 bg-gray-900 text-center text-blue-200 text-sm glassmorphism rounded-t-xl animate-fade-in animate-delay-1400">
+        <p class="mb-2">&copy; 2025 Innovaciones Futuristas. Todos los derechos reservados.</p>
+        <p class="mb-2">Diseñado con pasión por programadores visionarios.</p>
+        <p>Síguenos en <a href="#" class="text-teal-300 hover:underline font-semibold">@FutuTech</a></p>
+    </footer>
 </body>
 
 </html>
