(mathias) modificacion del slogan y la mision  (inicio,sobre nosotros)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 
   <main id="inicio">
     <!--Matias-->
-
+<!-- Inicio Section -->
+    <section id="inicio" class="relative flex-1 flex flex-col justify-center items-center text-center py-32 px-4 min-h-screen pt-24 md:pt-32">
+        <div class="glassmorphism p-8 md:p-12 rounded-xl max-w-3xl w-full mx-auto animate-fade-in">
+            <h2 class="text-4xl md:text-6xl font-bold mb-6 text-teal-300 leading-tight">¡Bienvenido al Mañana, Hoy!</h2>
+            <p class="text-xl md:text-2xl mb-8 text-blue-100">En <strong class="text-teal-200">Innovaciones Futuristas</strong> No necesitas un DeLorean para ver el futuro: lo creamos nosotros. 😜</p>
+            <p class="text-lg md:text-xl mb-10 text-blue-100">Explora nuestras propuestas de dispositivos inteligentes, proyecto espacial de drones autónomos y hasta un robot barista que prepara el mejor mate con IA.</p>
+            <a href="#proyectos" class="btn-futuristic">Explorar Proyectos</a>
+        </div>
+    </section>
     <!-- Sobre Nosotros Section -->
     <section id="sobre-nosotros"
       class="py-20 px-4 bg-gradient-to-br from-purple-900 to-indigo-900 flex flex-col items-center text-center">
@@ -49,9 +57,7 @@
           apasionados por transformar el futuro. Desde nuestra fundación en 2020, nos hemos dedicado a la investigación,
           desarrollo y aplicación de tecnologías disruptivas que mejoran la vida de las personas y empujan los límites
           de lo posible.</p>
-        <p class="text-lg md:text-xl text-blue-100">Nuestra misión es simple: hacer que el futuro sea una realidad
-          accesible para todos, hoy. Creemos en la innovación sostenible y en el impacto positivo que la tecnología
-          puede tener en la sociedad.</p>
+        <p class="text-lg md:text-xl text-blue-100">Nuestra misión es clara: acercar el futuro al presente, haciéndolo accesible para todos. Apostamos por una innovación responsable que genere un impacto positivo y duradero en la sociedad..</p>
       </div>
     </section>
     <!--Carlos-->
